@@ -2,6 +2,9 @@
 
 	* Defaults.py (LOGFILE_INCOMING): Replaces LOGFILE.
 
+	(LOGFILE_DEBUG): New logfile to hold the tracebacks generated by
+	uncaught exceptions.
+
 2001-12-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Util.py (unixdate): New function to return a date string in the
